# persistent

./: LICENSE  README.md
cpp/: .gitignore  CMakeLists.txt
cpp/.cache/clangd/index/: anak_kadal.cpp.043E6E6CE12E5967.idx  anak_kadal.cpp.53FD55D8F7F4C647.idx  anak_kadal.cpp.E1C09EC1CB7F95F3.idx  anak_kadal.hpp.51EE35A22AAC7FD2.idx  anak_kadal.hpp.B23A15F561123CD5.idx  anak_kadal.hpp.F3544652F7737734.idx  anak_pasar_jangkrik.hpp.4842DFF1FE5C9A09.idx  anak_pasar_jangkrik.hpp.A78896964EE9B131.idx  anak_pasar_jangkrik.hpp.ABE27B6583BD2809.idx  anak_pasar_jankrik.cpp.C4FB3A940D7ED10E.idx  anak_pasar_jankrik.cpp.C9E8B5407FAB525F.idx  anak_pasar_jankrik.cpp.F956C75AEBDBFACB.idx  arsitek.cpp.0E58B5A9774053F6.idx  arsitek.cpp.2C713B8F72BAF7E8.idx  arsitek.cpp.B222B709448ECD7B.idx  arsitek.hpp.61C0E631DA35989B.idx  arsitek.hpp.DD9A2F6374227546.idx  bilangan_kompleks.cpp.362A0B042978ACCB.idx  bilangan_kompleks.cpp.647492AFF3102F55.idx  bilangan_kompleks.cpp.767546D7694DE0D1.idx  bilangan_kompleks.hpp.C1DDEA84A32B7730.idx  (+25 more)
cpp/.clangd/: config.yaml
cpp/include/: ikan.hpp  something.hpp
cpp/include/find_it/: kafe_programmer.hpp  random_class.hpp
cpp/include/leetcode/: is_isomorphic.hpp  linked_list.hpp
cpp/include/random/: a.hpp
cpp/src/: ikan.cpp  main.cpp  something.cpp
cpp/src/find_it/: random_class.cpp
cpp/src/leetcode/: is_isomorphic.cpp  linked_list.cpp
cpp/src/program/: cmn.cpp
cpp/src/random/: a.cpp
rust/: Cargo.toml
rust/src/: main.rs
rust/src/modules/: inputs.rs  linked_list.rs  mod.rs  qrcode.rs  searchs.rs
rust/src/test_module/: mod.rs
(+48 files in other folders)
