[package]
name = "persistent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.0"
qrcodegen = "1.8.0"
rand = "0.8.5"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
twitter-v2 = "0.1.8"
